cabal-version: 3.0
name:          plutus-pab-executables
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    jann.mueller@iohk.io
author:        Jann Müller
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wunused-packages

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

executable plutus-pab-setup
  main-is:            Main.hs
  hs-source-dirs:     app
  other-modules:      CommandParser
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  --------------------
  -- Local components
  --------------------
  build-depends:
    , plutus-contract  >=1.2.0
    , plutus-pab       >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:      iohk-monitoring

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                  >=4.9 && <5
    , monad-logger
    , optparse-applicative

-- TODO: This needs to be moved to plutus-use-cases once plutus-pab doesn't
-- depend on plutus-use-cases anymore.
executable plutus-pab-examples
  main-is:            Main.hs
  hs-source-dirs:     examples
  other-modules:
    ContractExample
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    ContractExample.WaitForTx

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  --------------------
  -- Local components
  --------------------
  build-depends:
    , plutus-contract        >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-pab             >=1.2.0
    , plutus-script-utils    >=1.2.0
    , plutus-tx-constraints  >=1.2.0
    , plutus-use-cases       >=1.2.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base           >=4.9 && <5
    , containers
    , data-default
    , freer-simple
    , lens
    , openapi3
    , prettyprinter
    , text

-- TODO: This needs to be moved to plutus-use-cases once plutus-pab doesn't
-- depend on plutus-use-cases anymore.
executable plutus-uniswap
  main-is:            Main.hs
  hs-source-dirs:     examples/uniswap
  other-modules:
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  --------------------
  -- Local components
  --------------------
  build-depends:
    , plutus-contract      >=1.2.0
    , plutus-pab           >=1.2.0
    , plutus-script-utils  >=1.2.0
    , plutus-use-cases     >=1.2.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base           >=4.9 && <5
    , containers
    , data-default
    , freer-simple
    , openapi3
    , prettyprinter
    , text

-- TODO: This needs to be moved to plutus-use-cases once plutus-pab doesn't
-- depend on plutus-use-cases anymore.
executable plutus-pab-local-cluster
  main-is:            Main.hs
  hs-source-dirs:     local-cluster examples
  other-modules:
    ContractExample
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    ContractExample.WaitForTx

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  --------------------
  -- Local components
  --------------------
  build-depends:
    , plutus-contract        >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-pab             >=1.2.0
    , plutus-script-utils    >=1.2.0
    , plutus-tx-constraints  >=1.2.0
    , plutus-use-cases       >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:      plutus-ledger-api >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base           >=4.9 && <5
    , containers
    , data-default
    , freer-simple
    , lens
    , openapi3
    , prettyprinter
    , text

test-suite plutus-pab-test-full
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:        -Wunused-packages
  hs-source-dirs:     test/full examples
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    ContractExample
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    ContractExample.WaitForTx
    Plutus.PAB.CliSpec
    Plutus.PAB.CoreSpec
    Plutus.PAB.Effects.Contract.BuiltinSpec
    Plutus.PAB.Effects.Contract.ContractTest
    Plutus.PAB.Simulator.Test

  -- TODO plutus-use-cases dep needs to be removed
  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , freer-extras             >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-pab               >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0
    , plutus-use-cases         >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , iohk-monitoring
    , plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base                  >=4.9 && <5
    , containers
    , data-default
    , freer-simple
    , http-client
    , lens
    , mtl
    , openapi3
    , prettyprinter
    , quickcheck-instances
    , row-types
    , servant-client
    , servant-server
    , sqlite-simple
    , stm
    , tasty
    , tasty-hunit
    , text
    , uuid
    , yaml

test-suite plutus-pab-test-full-long-running
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:        -Wunused-packages
  hs-source-dirs:     test/full examples
  type:               exitcode-stdio-1.0
  main-is:            SpecLongRunning.hs
  other-modules:
    ContractExample
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    ContractExample.WaitForTx
    Plutus.PAB.CliSpec
    Plutus.PAB.Effects.Contract.ContractTest
    Plutus.PAB.Simulator.Test

  -- TODO plutus-use-cases dep needs to be removed
  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , freer-extras             >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-pab               >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0
    , plutus-use-cases         >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , iohk-monitoring
    , plutus-ledger-api  >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base            >=4.9 && <5
    , containers
    , data-default
    , freer-simple
    , http-client
    , lens
    , mtl
    , openapi3
    , prettyprinter
    , row-types
    , servant-client
    , servant-server
    , sqlite-simple
    , tasty
    , tasty-hunit
    , text
    , yaml

executable tx-inject
  import:           lang
  main-is:          Main.hs
  hs-source-dirs:   tx-inject
  other-modules:    TxInject.RandomTx
  default-language: Haskell2010

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator  >=1.2.0
    , plutus-contract        >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-pab             >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:    cardano-api >=1.35

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                  >=4.9 && <5
    , clock
    , containers
    , data-default
    , hedgehog
    , lens
    , mwc-random
    , optparse-applicative
    , pretty-simple
    , primitive
    , rate-limit
    , signal
    , stm
    , text
    , time-units
    , yaml

executable sync-client
  import:           lang
  main-is:          Main.hs
  hs-source-dirs:   sync-client
  default-language: Haskell2010

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , plutus-chain-index-core  >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api       >=1.35
    , cardano-slotting

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                  >=4.9 && <5
    , contra-tracer
    , either
    , optparse-applicative
    , text

executable pab-cli
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: pab-cli
  other-modules:
    App
    CommandParser
    Types

  ghc-options:    -threaded -Wmissing-import-lists -Wunused-packages

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , freer-extras             >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-pab               >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                  >=1.35
    , cardano-ledger-shelley
    , ouroboros-consensus-shelley

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base            >=4.9 && <5
    , bytestring
    , data-default
    , directory
    , docopt
    , exceptions
    , filepath
    , freer-simple
    , MissingH
    , process
    , req
    , servant-client
    , text
    , time
    , yaml
