cabal-version: 3.0
name:          plutus-pab
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    jann.mueller@iohk.io
author:        Jann Müller
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          lang
  ghc-options:     -Wunused-packages
  exposed-modules:
    Cardano.Api.NetworkId.Extra
    Cardano.BM.Data.Tracer.Extras
    Cardano.Chain
    Cardano.ChainIndex.ChainIndex
    Cardano.ChainIndex.Server
    Cardano.ChainIndex.Types
    Cardano.Node.API
    Cardano.Node.Client
    Cardano.Node.Mock
    Cardano.Node.Params
    Cardano.Node.Server
    Cardano.Node.Types
    Cardano.Protocol.Socket.Mock.Client
    Cardano.Protocol.Socket.Mock.Server
    Cardano.Wallet.LocalClient
    Cardano.Wallet.LocalClient.ExportTx
    Cardano.Wallet.Mock.API
    Cardano.Wallet.Mock.Client
    Cardano.Wallet.Mock.Handlers
    Cardano.Wallet.Mock.Server
    Cardano.Wallet.Mock.Types
    Cardano.Wallet.RemoteClient
    Cardano.Wallet.Types
    Control.Concurrent.Availability
    Control.Concurrent.STM.Extras
    Control.Concurrent.STM.Extras.Stream
    Control.Monad.Freer.Delay
    Plutus.PAB.App
    Plutus.PAB.Arbitrary
    Plutus.PAB.Core
    Plutus.PAB.Core.ContractInstance
    Plutus.PAB.Core.ContractInstance.BlockchainEnv
    Plutus.PAB.Core.ContractInstance.RequestHandlers
    Plutus.PAB.Core.ContractInstance.STM
    Plutus.PAB.Core.Indexer.TxConfirmationStatus
    Plutus.PAB.Db.Beam
    Plutus.PAB.Db.Beam.ContractStore
    Plutus.PAB.Db.Memory.ContractStore
    Plutus.PAB.Db.Schema
    Plutus.PAB.Effects.Contract
    Plutus.PAB.Effects.Contract.Builtin
    Plutus.PAB.Effects.TimeEffect
    Plutus.PAB.Effects.UUID
    Plutus.PAB.Events
    Plutus.PAB.Events.Contract
    Plutus.PAB.Events.ContractInstanceState
    Plutus.PAB.Instances
    Plutus.PAB.LocalCluster.Run
    Plutus.PAB.Monitoring.Config
    Plutus.PAB.Monitoring.Monitoring
    Plutus.PAB.Monitoring.PABLogMsg
    Plutus.PAB.Run
    Plutus.PAB.Run.Cli
    Plutus.PAB.Run.Command
    Plutus.PAB.Run.CommandParser
    Plutus.PAB.Simulator
    Plutus.PAB.Timeout
    Plutus.PAB.Types
    Plutus.PAB.Webserver.API
    Plutus.PAB.Webserver.Client
    Plutus.PAB.Webserver.Handler
    Plutus.PAB.Webserver.Server
    Plutus.PAB.Webserver.Types
    Plutus.PAB.Webserver.WebSocket

  other-modules:   Servant.Extra
  hs-source-dirs:  src

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , freer-extras             >=1.2.0
    , marconi-core             >=1.2.0
    , pab-blockfrost           >=1.2.0
    , plutus-chain-index       >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-addresses
    , cardano-api                      >=1.35
    , cardano-crypto
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-slotting
    , cardano-wallet
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-launcher
    , iohk-monitoring
    , lobemo-backend-ekg
    , ouroboros-network
    , ouroboros-network-framework
    , plutus-ledger-api                >=1.0.0
    , plutus-tx                        >=1.0.0
    , plutus-tx-plugin                 >=1.0.0
    , Win32-network

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson                      <2.0.3.0
    , aeson-pretty
    , async
    , base                       >=4.7     && <5
    , beam-core
    , beam-migrate
    , beam-postgres
    , beam-sqlite
    , bytestring
    , containers
    , contra-tracer
    , cryptonite
    , data-default
    , directory
    , either
    , exceptions
    , filepath
    , freer-simple
    , generic-arbitrary
    , http-client
    , http-client-tls
    , insert-ordered-containers
    , lens
    , memory
    , monad-logger
    , mtl
    , network-mux
    , openapi3
    , optparse-applicative
    , postgresql-simple
    , prettyprinter              >=1.1.0.1
    , QuickCheck
    , quickcheck-instances
    , random
    , resource-pool
    , row-types
    , servant
    , servant-client
    , servant-openapi3
    , servant-options
    , servant-server
    , servant-swagger-ui
    , servant-websockets
    , sqlite-simple
    , stm
    , tagged
    , text
    , text-class
    , time
    , time-units
    , transformers
    , uuid
    , wai
    , wai-cors
    , warp
    , warp-tls
    , websockets
    , yaml

test-suite plutus-pab-test-light
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:        -Wunused-packages
  hs-source-dirs:     test/light
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Cardano.Api.NetworkId.ExtraSpec
    Cardano.Wallet.LocalClient.ExportTxSpec
    Cardano.Wallet.RemoteClientSpec
    Cardano.Wallet.ServerSpec
    Control.Concurrent.STM.ExtrasSpec
    Plutus.PAB.ArbitrarySpec

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator  >=1.2.0
    , plutus-contract        >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-pab             >=1.2.0
    , plutus-tx-constraints  >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api:{cardano-api, gen}  >=1.35
    , plutus-ledger-api               >=1.0.0
    , plutus-tx                       >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base                  >=4.9 && <5
    , bytestring
    , data-default
    , freer-simple
    , hedgehog
    , hedgehog-quickcheck
    , QuickCheck
    , quickcheck-instances
    , smallcheck
    , stm
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
